# geneva

./: .gitignore  .zshrc  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: FUNDING.yml
context/: current-priorities.md  goals.md  me.md  team.md  work.md
decisions/: log.md
docs/: UX-B2-B9-B4_PRODUCT_BRAIN_LOOP.md  agent-harness-infographic.md
geneva-ui/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
references/: capability-gaps.md  claw-code-philosophy.md  notebooklm-registry.md
scripts/: python-dependency-audit.py  run-fastapi-contracts.py
src/: __init__.py  cli.py  config.py  cost_tracker.py  main.py  query_engine.py  repl.py  runtime.py  system_init.py  task.py
tasks/: todos.md
templates/: session-summary.md
tests/: conftest.py  test_agent_harness_runtimes.py  test_agent_loop.py  test_artifact_store.py  test_audit_runtime_regressions.py  test_claude_code_tool_parity.py  test_command_system.py  test_compact_service.py  test_computer_use_unit.py  test_config.py  test_context_disclosure.py  test_d8_attachment.py  test_full_brain_search.py  test_geneva_memdir.py  test_geneva_services.py  test_geneva_skills.py  test_geneva_web.py  test_mcp_connectors.py  test_memory_write_review.py  test_microcompact.py  test_mode_contract.py  test_plugin_runtime.py  test_project_sources.py  test_providers.py  test_r10_project.py  test_repl.py  test_research_engine_unit.py  test_research_runs.py  (+3 more)
(+576 files in other folders)
