[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geneva"
version = "0.1.0"
description = "Geneva local agent harness for memory, skills, projects, and tool-using workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jintaphon Teosuwan", email = "jintaphon123@gmail.com"}
]
keywords = ["agent", "cli", "ai", "llm", "memory", "skills", "projects"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic",
    "openai",
    "pydantic",
    "python-dotenv",
    "rich",
    "prompt-toolkit",
    "tiktoken>=0.7.0",
    "watchdog",
    "fastapi>=0.115.0",
    "httpx>=0.25.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
computer_use = ["playwright>=1.40.0"]
dev = [
    "build>=1.0.0",
    "twine>=5.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
geneva = "src.cli:main"

[project.urls]
Homepage = "https://github.com/jintaphon123/geneva"
Repository = "https://github.com/jintaphon123/geneva"
Documentation = "https://github.com/jintaphon123/geneva#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
